# udfs

./: CMakeLists.txt  README.md
doc/: terminology.txt
include/: chunk.h  general.h  hook_chmod.h  hook_chown.h  hook_getattr.h  hook_mkdir.h  hook_mknod.h  hook_open.h  hook_read.h  hook_readdir.h  hook_rename.h  hook_rmdir.h  hook_unlink.h  hook_utimens.h  hook_write.h  main.h  metadata.h
src/: chunk.c  hook_chmod.c  hook_chown.c  hook_getattr.c  hook_mkdir.c  hook_mknod.c  hook_open.c  hook_read.c  hook_readdir.c  hook_rename.c  hook_rmdir.c  hook_unlink.c  hook_utimens.c  hook_write.c  main.c  metadata.c
